app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
	--foreground-rgb: 0, 0, 0;
	--background-start-rgb: 214, 219, 220;
	--background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
	:root {
		--foreground-rgb: 255, 255, 255;
		--background-start-rgb: 4, 9, 22;
		/* --background-start-rgb: 233, 238, 251; */
		--background-end-rgb: 4, 9, 22;
	}
}

body {
	color: rgb(var(--foreground-rgb));
	background: linear-gradient(
			to bottom,
			transparent,
			rgb(var(--background-end-rgb))
		)
		rgb(var(--background-start-rgb));
}

.nav {
	text-decoration: none;
}

.nav li {
	float: left;
}

@layer utilities {
	.text-balance {
		text-wrap: balance;
	}
}

